Fixes bottom alignment on front end
Specificity overide to ensure margin is applied and preserved on last child to ensure that when columns are aligned to bottom they are are flush with each other

Resolves https://github.com/WordPress/gutenberg/pull/13899#issuecomment-465958295

--- a/packages/block-library/src/columns/style.scss
+++ b/packages/block-library/src/columns/style.scss
@@ -11,7 +11,6 @@
 
 .wp-block-column {
 	flex-grow: 1;
-	margin-bottom: 1em;
 
 	// Responsiveness: Show at most one columns on mobile.
 	flex-basis: 100%;
@@ -43,6 +42,14 @@
 			margin-left: $grid-size-large * 2;
 		}
 	}
+}
+
+// Specificity overide to ensure margin is applied
+// and preserved on last child to ensure that when columns
+// are aligned to bottom they are are flush with each other
+.wp-block-column,
+.entry-content > .wp-block-columns .wp-block-column:last-child {
+	margin-bottom: 1em;
 }
 
 /**
